syntax = "proto3";

package sap.autopilot.remote.work.processor.v1;

option go_package = "github.com/SAP/remote-work-processor/generated;pb";
option java_multiple_files = false;
option java_outer_classname = "ReconciliationRequestProto";
option java_package = "com.sap.autopilot.remote.work.processor.protobuf";

message ReconciliationRequest {
  string resource_name = 1;
  optional string resource_namespace = 2;
}